@@ -560,6 +560,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-11948. test-patch's issue matching regex should be configurable.
     (Sean Busbey via aw)
 
+    HADOOP-9723. Improve error message when hadoop archive output path already
+    exists. (Jean-Baptiste Onofré and Yongjun Zhang via aajisak)
+
   OPTIMIZATIONS
 
     HADOOP-11785. Reduce the number of listStatus operation in distcp
